package PAI.domain.department;
import java.util.Set;

public interface IDepartmentListFactory {
    Set<Department> newDepartmentList ();
}
